generated/checkers/gen/AllGen-Concurrency-7d42e097607c4d246d99225bf2b195b6167a210c/build_logs/syntax-repair-04/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In lambda function:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:229:40: error: ‘SymCastExpr’ was not declared in this scope
  229 |       while (const auto *CE = dyn_cast<SymCastExpr>(Cur))
      |                                        ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:229:52: error: no matching function for call to ‘dyn_cast<<expression error> >(const clang::ento::SymExpr*&)’
  229 |       while (const auto *CE = dyn_cast<SymCastExpr>(Cur))
      |                               ~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:667:37: note: candidate: ‘template<class To, class From> decltype(auto) llvm::dyn_cast(std::unique_ptr<From>&)’
  667 | [[nodiscard]] inline decltype(auto) dyn_cast(std::unique_ptr<From> &Val) {
      |                                     ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:667:37: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:229:52: error: template argument 1 is invalid
  229 |       while (const auto *CE = dyn_cast<SymCastExpr>(Cur))
      |                               ~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:661:37: note: candidate: ‘template<class To, class From> decltype(auto) llvm::dyn_cast(From*)’
  661 | [[nodiscard]] inline decltype(auto) dyn_cast(From *Val) {
      |                                     ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:661:37: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:229:52: error: template argument 1 is invalid
  229 |       while (const auto *CE = dyn_cast<SymCastExpr>(Cur))
      |                               ~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:655:37: note: candidate: ‘template<class To, class From> decltype(auto) llvm::dyn_cast(From&)’
  655 | [[nodiscard]] inline decltype(auto) dyn_cast(From &Val) {
      |                                     ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:655:37: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:229:52: error: template argument 1 is invalid
  229 |       while (const auto *CE = dyn_cast<SymCastExpr>(Cur))
      |                               ~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:649:37: note: candidate: ‘template<class To, class From> decltype(auto) llvm::dyn_cast(const From&)’
  649 | [[nodiscard]] inline decltype(auto) dyn_cast(const From &Val) {
      |                                     ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:649:37: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:229:52: error: template argument 1 is invalid
  229 |       while (const auto *CE = dyn_cast<SymCastExpr>(Cur))
      |                               ~~~~~~~~~~~~~~~~~~~~~^~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
